# vibe-jet-tagging

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
notebooks/: 2025-10-08-IT-classifier-baselines.ipynb  2025-10-08-IT-data-EDA.ipynb  2025-10-09-DM-feature-extraction-demo.ipynb  2025-10-09-DM-quantitative-comparison.ipynb  2025-10-09-IT-gpt-oss-classifier.ipynb  2025-10-10-IT-test_llm_classifier.ipynb  2025-10-13-easy-hard-jets-analysis.ipynb  test.ipynb  test_llm_classifier.ipynb
notes/: 2025-10-10-async-fixes.md  2025-10-10-debugging-event-loop.md  2025-10-10-final-status.md  2025-10-10-quick-debug-guide.md  2025-10-10-running-llm-server.md  2025-10-10-usage-guide.md  2025-10-11-easy-hard-jets-investigation-plan.md  2025-10-11-implementation-summary.md  2025-10-11-property-analysis-results.md  2025-10-11-template-improvement-results.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  README_EASY_HARD_INVESTIGATION.md  baseline_usage.md  data_and_baselines.md  gemini_refactor_summary.md  gemini_thinking_budget_fix.md  llm_classifier_implementation.md  local_llm_integration.md  parser_fix_analysis.md  physics_and_methods.md  project_overview.md  response_structure_guide.md
scripts/: add_debug_logging.py  analyze_advanced_properties.py  analyze_easy_hard_jets.py  analyze_llm_templates.py  analyze_response_structure.py  bootstrap_error_bars.py  bootstrap_llm_results.py  debug_event_loop.py  download_qg_data.py  plot_auc_vs_njets.py  plot_llm_analysis.py  response_example.txt  run_easy_hard_investigation.sh  run_llm_analysis.py  test_local_llm.py  test_parser_fix.py  validate_easy_hard_hypothesis.py
templates/: README.md  features_basic.txt  features_full.txt  features_kinematic.txt  hybrid_basic.txt  hybrid_full.txt  hybrid_kinematic.txt  simple_list.txt  structured_yaml.txt  table_format.txt  with_engineered_features.txt  with_explicit_counting.txt  with_optimal_cut.txt  with_statistical_awareness.txt  with_summary_stats.txt
tests/: test_async_batching.py  test_baselines.py  test_classifier.py  test_classifier_numpy.py  test_config.py  test_feature_extractors.py  (+4 more)
(+9 files in other folders)
