[project]
name = "vibe-jet-tagging"
version = "0.1.0"
description = "Evaluating reasoning LLMs on particle physics jet tagging (quark/gluon discrimination)"
readme = "README.md"
authors = [
    { name = "Inar", email = "timinar@gmail.com" },
    { name = "Daniel Murnane", email = "dtmurnane@lbl.gov" }
]
requires-python = ">=3.11"
dependencies = [
    "energyflow>=1.4.0",
    "google-genai>=1.41.0",
    "google-generativeai>=0.8.5",
    "h5py>=3.14.0",
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
    "openai>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
